added single thread pool with spawning OS thread per request